--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_USER = postgres
-DB_PASSWORD = 123456
+DB_USER = elmersont
+DB_PASSWORD = 
 DB_HOST = localhost
 DB_PORT = 5432
 DB_DATABASE = altiplano
