--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,27 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@testing-library/react": "^16.0.0",
-    "@types/react": "^18.3.3",
+    "@eslint/js": "^9.11.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint": "^9.11.0",
+    "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
-    "vite": "^5.4.1"
+    "rollup": "^4.22.4",
+    "vite": "^5.4.7"
   }
 }
-
