--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
