--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 PORT=3001
-DB_USER=altiplano_store_user
-DB_PASSWORD=WwM6D7if3Aagli5uzmBkGsi6rldViAf8
-DB_HOST=dpg-crh4t45svqrc73883rg0-a
+DB_USER=postgres
+DB_PASSWORD=1111
+DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=altiplano_store
-NODE_ENV=production
+DB_DATABASE=altiplano
+NODE_ENV=test
 
 JWT_SECRET=altiplano
